--- a/content/404.md
+++ b/content/404.md
@@ -1,6 +1,7 @@
 ---
-title: 404
+title: 404 - Page not found
 layout: layouts/page.njk
 permalink: /404.html
 ---
-Uh oh, the resource you requested isn't here. Sorry..
+The page you requested could not be found.
+[Homepage](/)
