Update 404 to button

--- a/content/404.md
+++ b/content/404.md
@@ -4,4 +4,4 @@ layout: layouts/page.njk
 permalink: /404.html
 ---
 The page you requested could not be found.
-[Homepage](/)
+<a href="/" class="mt-4 button">Homepage</a>
